# cairo-cmake-static

./: .gitignore  CMakeLists.txt
cairo/: CMakeLists.txt  cairo_sources.cmake  config.cmake  features.cmake
ext/: CMakeLists.txt
freetype2/: CMakeLists.txt
pixman/: CMakeLists.txt
pixman/cmake/: config_configure.cmake
png/: CMakeLists.txt
zlib/: CMakeLists.txt
