cmake_minimum_required(VERSION 3.12)
project(cairo)
set(CAIRO_CMAKE_SRC_DIR ${CMAKE_CURRENT_SOURCE_DIR})
set(CAIRO_EXT_DIR ${CAIRO_CMAKE_SRC_DIR}/ext)
add_subdirectory(${CAIRO_EXT_DIR})
set(CAIRO_DIR ${CAIRO_EXT_DIR}/cairo)
set(PIXMAN_DIR ${CAIRO_EXT_DIR}/pixman)
set(ZLIB_DIR ${CAIRO_EXT_DIR}/zlib)
set(PNG_DIR ${CAIRO_EXT_DIR}/libpng)
set(FREETYPE_DIR ${CAIRO_EXT_DIR}/freetype2)
add_subdirectory(zlib)
add_subdirectory(png)
add_subdirectory(pixman)
add_subdirectory(freetype2)
add_subdirectory(cairo)
